--- a/home/include/header.html
+++ b/home/include/header.html
@@ -1,72 +1,79 @@
 <nav class="skip-nav">
 	<a href="#main">본문 바로가기</a>
 </nav>
-<div class="header-grid">
-	<h1 class="logo">
-		<a href="../main/index.html">
-			<img src="../resource/img/logo.jpg" alt="CTS 기독교TV AMERICA 뉴욕방송" class="img-logo">
-		</a>
-	</h1>
-	<button type="button" class="btn-menu"><span>메뉴 보기</span></button>
-	<nav class="gnb-area">
-		<ul class="nav-d1">
-			<li>
-				<a href="../intro/purpose.html">뉴욕방송 소개</a>
-				<ul class="nav-d2">
-					<li><a href="../intro/purpose.html">회사소개</a></li>
-					<li><a href="../intro/organization.html">오시는길</a></li>
-					<li><a href="../intro/map.html">공지사항</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="../business/concert.html">편성표</a>
-			</li>
-			<li>
-				<a href="../notice/notice.html">찬양</a>
-			</li>
-			<li>
-				<a href="../notice/notice.html">설교</a>
-			</li>
-			<li>
-				<a href="../notice/notice.html">방송프로그램</a>
-				<ul class="nav-d2">
-					<li><a href="#">전체</a></li>
-					<li><a href="#">교양/다큐</a></li>
-					<li><a href="#">교육/특강</a></li>
-					<li><a href="#">특집</a></li>
-					<li><a href="#">CTS NEWS</a></li>
-					<li><a href="#">종영 프로그램</a></li>
-				</ul>
-			</li>
-			<li>
-				<a href="../notice/notice.html">온라인후원</a>
-			</li>
-			<li>
-				<a href="../notice/notice.html">라이브</a>
-			</li>
-		</ul>
-		<div class="header-util"> 
-			<!-- [D] 비로그인 시 -->
-			<span>
-				<a href="#" class="btn-login"><span>로그인</span></a>
-			</span>
-			<span>
-				<a href="#" class="btn-join"><span>회원가입</span></a>
-			</span>
-			<!-- // [D] 비로그인 시 -->
-	
-			<!-- [D] 로그인 시 ->
-			<span>
-				<a href="#" class="btn-logout"><span>로그아웃</span></a>
-			</span>
-			<span>
-				<a href="#" class="btn-mypage"><span>마이페이지</span></a>
-			</span>
-			<!-- // [D] 로그인 시 -->
+<div class="header-inner">
+	<div class="header-grid">
+		<h1 class="logo">
+			<a href="../main/index.html">
+				<img src="../resource/img/logo.jpg" alt="CTS 기독교TV AMERICA 뉴욕방송" class="img-logo">
+			</a>
+		</h1>
+		<button type="button" class="btn-menu"><span>메뉴 보기</span></button>
+		<nav class="gnb-area">
+			<ul class="nav-d1">
+				<li>
+					<a href="../intro/purpose.html">뉴욕방송 소개</a>
+					<ul class="nav-d2">
+						<li><a href="../intro/purpose.html">회사소개</a></li>
+						<li><a href="../intro/organization.html">오시는길</a></li>
+						<li><a href="../intro/map.html">공지사항</a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="../business/concert.html">편성표</a>
+				</li>
+				<li>
+					<a href="../notice/notice.html">찬양</a>
+				</li>
+				<li>
+					<a href="../notice/notice.html">설교</a>
+				</li>
+				<li>
+					<a href="../notice/notice.html">방송프로그램</a>
+					<ul class="nav-d2">
+						<li><a href="#">전체</a></li>
+						<li><a href="#">교양/다큐</a></li>
+						<li><a href="#">교육/특강</a></li>
+						<li><a href="#">특집</a></li>
+						<li><a href="#">CTS NEWS</a></li>
+						<li><a href="#">종영 프로그램</a></li>
+					</ul>
+				</li>
+				<li>
+					<a href="../notice/notice.html">온라인후원</a>
+				</li>
+				<li>
+					<a href="../notice/notice.html">라이브</a>
+				</li>
+			</ul>
+			<div class="header-util"> 
+				<!-- [D] 비로그인 시 -->
+				<span>
+					<a href="#" class="btn-login"><span>로그인</span></a>
+				</span>
+				<span>
+					<a href="#" class="btn-join"><span>회원가입</span></a>
+				</span>
+				<!-- // [D] 비로그인 시 -->
+		
+				<!-- [D] 로그인 시 ->
+				<span>
+					<a href="#" class="btn-logout"><span>로그아웃</span></a>
+				</span>
+				<span>
+					<a href="#" class="btn-mypage"><span>마이페이지</span></a>
+				</span>
+				<!-- // [D] 로그인 시 -->
 
-			<span>
-				<button href="#" class="btn-search"><span class="blind">검색</span></button>
-			</span>
-		</div>
-	</nav>
+				<span>
+					<button href="#" class="btn-search"><span class="blind">검색</span></button>
+				</span>
+			</div>
+		</nav>
+	</div>
+</div>
+<div class="page-util">
+	<div class="inner">
+		<button type="button" class="btn-top"><span class="blind">TOP</span></button>
+	</div>
 </div>
