--- a/home/resource/css/component.css
+++ b/home/resource/css/component.css
@@ -51,6 +51,15 @@ body { font-family:'NotoSans', 'Dotum', 'sans-serif'; font-weight:400; font-size
 .btn-base .ico-arr { margin:-4px 0 0 5px; }
 .btn-base .ico-download { margin:-4px 0 0 4px; }
 
+.page-util { position:fixed; bottom:0; right:0; width:100%; }
+.page-util .inner { display:block; max-width:1340px; margin:0 auto; text-align:right; padding:40px 20px; text-align:right; }
+.btn-top { position:relative; display:inline-block; width:50px; height:50px; border-radius:50%; background:#fff; font-size:16px; text-align:center; line-height:50px; border:1px solid rgb(233, 233, 233); box-shadow:0 0 6px rgba(0,0,0,.2); color:#666; overflow:hidden; }
+.btn-top:after,
+.btn-top:before { position:absolute; top:22px; left:18px; display:block; width:13px; height:13px; border-bottom:1px solid #444; border-right:1px solid #444; transform:rotate(225deg); content:""; transition:margin ease-in-out .2s }
+.btn-top:before { top:200%; }
+.btn-top:hover:after { margin-top:-75px; }
+.btn-top:hover:before { margin-top:-75px; }
+
 .btn-menu { position:relative; display:inline-block; width:30px; height:30px; }
 .btn-menu:before,
 .btn-menu:after { position:absolute; left:5%; display:block; width:80%; height:2px; background:#191919; transition:all ease-in-out .25s; content:""; }
@@ -112,7 +121,12 @@ ul.bul-dot > li { color:#454545; margin-top:8px; padding-left:16px; font-size:18
 
 .logo { display:inline-block; vertical-align:middle; }
 
-.header-area { z-index:10; position:fixed; top:0; left:0; width:100%; height:110px; background:#fff; overflow:hidden; border-top:4px solid #4272d7; transition:height ease-in-out .2s;}
+
+.header-area { z-index:10; position:relative; top:0; left:0; width:100%; height:110px; background:#fff; }
+.main-wrap .header-area { top:-4px; }
+.header-area .header-inner { border-top:4px solid #4272d7;  width:100%; background:#fff; height:110px; transition:height ease-in-out .2s; overflow:hidden; }
+.header-area.fixed { z-index:21; top:0; }
+.header-area.fixed .header-inner { position:fixed; top:0; z-index:20; }
 .header-area .header-grid { position:relative; max-width:1260px; padding:0 52px; margin:0 auto; height:100%; }
 .header-area .header-grid:after { display:block; clear:both; content:""; }
 .header-area .logo { float:left; margin-top:20px; width:257px; }
@@ -123,22 +137,37 @@ ul.bul-dot > li { color:#454545; margin-top:8px; padding-left:16px; font-size:18
 .header-util > span + span:before { display:inline-block; width:2px; height:2px; border-radius:50%; background:#ccc; vertical-align:middle; content:""; margin:-2px 3px 0; }
 .header-util > span + span:last-child:before { height:12px; border-radius:0; width:1px; margin:0 -5px 0 6px; }
 .header-util a { display:inline-block; text-align:center; color:#252525; font-size:14px; }
-.header-util a:hover { color:#6e93bf}
+.header-util a:hover { color:#4272d7}
 .nav-d1 { position:relative; flex:1 1 auto; text-align:center; }
 .nav-d1 > li { position:relative; display:inline-block; margin:0 1%; }
 .nav-d1 > li > a { color:#757575; font-size:18px; font-weight:500; }
 .nav-d1 > li > a:hover,
 .nav-d1 > li:hover > a,
 .nav-d1 > li > a:focus,
-.nav-d1 > li:focus > a { color:#6e93bf; }
+.nav-d1 > li:focus > a { color:#4272d7; }
 .nav-d1 > li:last-child { margin-right:0; }
 .nav-d2 { display:none; position:absolute; top:40px; left:50%; margin-left:-75px; width:150px; text-align:center; }
-.nav-d2 > li > a { font-weight:400; font-size:14px; }
+.nav-d2 > li > a { position:relative; font-weight:400; font-size:14px; color:#757575 }
+.nav-d2 > li > a:after { position:absolute; top:100%; left:50%; right:50%; height:1px; display: block; content:""; background:#4272d7; transition:all ease-in-out .2s;}
 .nav-d2 > li { margin-top:8px; }
 .nav-d2 > li > a:hover,
-.nav-d2 > li > a:focus { border-bottom:1px solid #757575; }
+.nav-d2 > li > a:focus { color:#4272d7 }
+.nav-d2 > li > a:hover:after,
+.nav-d2 > li > a:focus:after { left:0; right:0; }
 
-.banner-area { height:100px; text-align:center; font-size:0; overflow:hidden; }
+.banner-area { position:relative; z-index:20; border-top:4px solid #4272d7; text-align:center; font-size:0; background:#fff}
+.banner-area .banner-inner { display:flex; justify-content:space-between; margin:0 auto; max-width:1300px; }
+.banner-area .banner-inner > span { display:block; flex:1 1 33.333%; }
+.banner-area .banner-inner > span img { width:100%; height:auto; }
+.btn-toggle { position:absolute; top:100%; left:0; right:0; display:block; width:76px; height:15px; border-radius:0 0 20px 20px; background:#C2C2C2; margin:0 auto; box-shadow:0 2px 8px rgba(0,0,0,.1); }
+.btn-toggle:after { position:absolute; width:0; height:0; display:block; top:50%; left:50%; border-top:5px solid #fff; border-right:5px solid transparent; border-left:5px solid transparent; border-bottom:5px solid transparent; content:""; transform:translate(-50%, -30%); }
+.btn-toggle.close:after { transform:rotate(180deg) translate(45%, 82%)}
+
+.slider-banner { z-index:20; position:relative; border-top:4px solid #4272d7; display:none; }
+.slider-banner .slider-inner {}
+.slider-banner img { width:100%; height:auto; }
+.slider-banner { position:relative; }
+.slider-banner .btn-toggle { z-index:10;}
 
 /* footer
 ====================== */
@@ -161,7 +190,7 @@ ul.bul-dot > li { color:#454545; margin-top:8px; padding-left:16px; font-size:18
 
 /* visual
 ====================== */
-.visual-area { z-index:0; position:relative; background-size:cover; background-position:center center; color:#fff; margin-top:110px; transition:all ease-in-out .2s; }
+.visual-area { z-index:0; position:relative; background-size:cover; background-position:center center; color:#fff; transition:all ease-in-out .2s; }
 .visual-area .tit-area { margin-top:120px; }
 .visual-area.main:after { display:none; }
 .visual-area.main .tit-area { z-index:1; position:relative; top:190px; left:0; width:100%; margin:0; text-align:center; }
@@ -177,7 +206,7 @@ ul.bul-dot > li { color:#454545; margin-top:8px; padding-left:16px; font-size:18
 .slider-visual .slick-arrow { display:block; width:90px; height:110px; color:transparent; font-size:0; }
 .slider-visual .slick-arrow.slick-prev { float:left; background:url('../img/sld_arrow_l.png') center center/contain no-repeat; }
 .slider-visual .slick-arrow.slick-next { float:right; background:url('../img/sld_arrow_r.png') center center/contain no-repeat; }
-.slider-pagination.type-num { position:absolute; left:0; bottom:40px; width:100%; text-align:right; padding-right:20px; text-align:center; }
+.slider-pagination.type-num { position:absolute; left:0; bottom:40px; width:100%; text-align:right; text-align:center; }
 .slider-pagination.type-num li { display:inline-block; margin:0 5px; }
 .slider-pagination.type-num a { display:inline-block; background:#fff; width:10px; height:10px; font-size:0; overflow:hidden; border-radius:50%; text-indent:-999px;}
 .slider-pagination.type-num .slick-active a { background:#1555de; }
@@ -188,14 +217,13 @@ ul.bul-dot > li { color:#454545; margin-top:8px; padding-left:16px; font-size:18
 .sub-area:after { display:block; clear:both; content:""; }
 
 /* nav */
-.main-area.sub { padding-top:110px; }
 .main-area.sub .visual-area { margin:0; }
 .nav-area { float:left; width:240px; padding:0 0 210px; }
 .nav-tit1 { position:relative; height:190px; font-size:24px; font-weight:500; color:#fff; background:#4D6C8C; overflow:hidden; }
-.nav-tit1:before { position:absolute; top:0; left:100%; display:block; width:200%; height:100%; transform:rotate(45deg); background:linear-gradient(to left, #4D6C8C 0%, #83a7ca 100%); content:""; animation:aniSliding ease-out 1.5s both; opacity:0.5; }
+.nav-tit1:before { position:absolute; top:0; left:100%; display:block; width:200%; height:100%; transform:rotate(45deg); background:linear-gradient(to left, #4D6C8C 0%, #83a7ca 100%); content:""; animation:aniSliding ease-out 2.5s both; opacity:0.5; }
 @keyframes aniSliding {
 	0% { }
-	100% { left:-200%; }
+	100% { left:-200%; opacity:0; }
 }
 .nav-tit1 span { position:absolute; z-index: 1; display:block; left:20px; bottom:30px; }
 .nav-list li:first-child { margin-top:0; }
@@ -467,8 +495,7 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance:none; margi
 	.only-resp { display:none !important; }
 	.user-info { display:none; }
 	
-	.header-area.hover { height:298px; background:#fff; box-shadow:0 5px 8px rgba(0,0,0,.1); }
-	.is-home .header-area.hover { height:398px; }
+	.header-area.hover .header-inner { height:310px; box-shadow:0 5px 8px rgba(0,0,0,.1); }
 	.header-area.hover .nav-d1 > li { color:#000; font-weight:400; }
 	.header-area.hover .nav-d2 { display:block; }
 }
