--- a/home/resource/css/component.css
+++ b/home/resource/css/component.css
@@ -124,7 +124,7 @@ ul.bul-dot > li { color:#454545; margin-top:8px; padding-left:16px; font-size:18
 
 .header-area { z-index:10; position:relative; top:0; left:0; width:100%; height:110px; background:#fff; }
 .main-wrap .header-area { top:-4px; }
-.header-area .header-inner { border-top:4px solid #4272d7;  width:100%; background:#fff; height:110px; transition:height ease-in-out .2s; overflow:hidden; }
+.header-area .header-inner { z-index:1; position:relative; border-top:4px solid #4272d7;  width:100%; background:#fff; height:110px; transition:height ease-in-out .2s; overflow:hidden; }
 .header-area.fixed { z-index:21; top:0; }
 .header-area.fixed .header-inner { position:fixed; top:0; z-index:20; }
 .header-area .header-grid { position:relative; max-width:1260px; padding:0 52px; margin:0 auto; height:100%; }
@@ -311,6 +311,7 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance:none; margi
 .form-area.type-tel .telnum .btns.ing .btn-base.sub { margin-right:10px; }
 
 .form-item .form-inp { margin-bottom:15px; }
+.form-item .form-inp:last-child { margin-bottom:0; }
 
 /* box */
 .box-base { max-height:200px; overflow:auto; border:1px solid #ccc; padding:20px; font-size:14px; }
@@ -321,10 +322,10 @@ input[type="number"]::-webkit-inner-spin-button { -webkit-appearance:none; margi
 .login-logo { text-align:center; margin-bottom:65px; }
 .login-wrap { width:100%; min-height:100%; padding:95px 0; background:#F7F7F7; border-top:4px solid #4272d7; }
 .login-area { position:relative; width:610px; margin:0 auto; }
-.login-area .login-inner { padding:90px 75px 110px; width:610px; background:#fff; border:1px solid #e9e9e9; }
+.login-area .login-inner { padding:55px 45px 50px; width:610px; background:#fff; border:1px solid #e9e9e9; }
 .login-area .logo { margin:0 auto 40px; }
 .login-tit { font-size:40px; font-weight:700; color:#000; text-align:center; }
-.login-desc { margin-bottom:13px; font-size:14px; color:#757575; text-align:center; }
+.login-desc { display:none; margin-bottom:13px; font-size:14px; color:#757575; text-align:center; }
 .login-desc > span + span:before { display:inline; content:">"; margin:0 5px; color:#cccccc; }
 .login-desc > span.current { color:#1c86ea; }
 .login-form { margin:55px 0 0; }
